update build (#9)